change homepage link

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "todo-list",
-  "homepage": "https://github.com/divyabaheti101/react-todo-list-2/",
+  "homepage": "https://divyabaheti101.github.io/react-todo-list-2/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
